--- a/_posts/2022-06-08-post-1.md
+++ b/_posts/2022-06-08-post-1.md
@@ -3,13 +3,14 @@ layout: post
 title: "Test title post"
 sub-title: "Example sub-title 1"
 date: 2022-06-08 12:33:00 -04
-permalink: "/welcome/"
+permalink: "/one/"
 location: Test location
 ordinal: 1
+preview: "This is an example of text that can be included. It can also contain markown if we really need it to, but that would be unwise."
 ---
 This is some example of the content of a post, which we should be able to show as a snippet on the main page. Otherwise we're left to writing the rest of this post in the main body of the markdown file. Final test.
 
-For example, this is the second paragraph, which shouldn't appear in the preview snippet. We can also try to introduce a sidenote Here we place the sidenote in the syntaxt that markdown expects to use for strikethroughs. We can continue on as if nothing happened. We seem to have some spacing issues though.
+For example, this is the second paragraph, which shouldn't appear in the preview snippet. We can also try to introduce a sidenote Here we place the sidenote in the syntaxt that markdown expects to use for strikethroughs. We can continue on as if nothing happened. We seem to have some spacing issues though. ~~Finally, here is a sidenote for further context.~~
 
 -fig This is some figure text. fig-![image-title](/assets/img/grief_10.jpg)
 {: .right-para }
