--- a/_posts/2022-06-07-post-0.md
+++ b/_posts/2022-06-07-post-0.md
@@ -6,6 +6,7 @@ date: 2022-06-07 12:45:00 -04
 permalink: "/zero/"
 location: Test location
 ordinal: 0
+preview: "This is an example of text that can be included on the main page of the post, but without the issue of possible note overflow. It can also contain markown if we really need it to, but that would be unwise."
 ---
 This is some example of the content of a post, which we should be able to show as a snippet on the main page. Otherwise we're left to writing the rest of this post in the main body of the markdown file. Final test.
 
