--- a/_posts/2022-06-07-initial.md
+++ b/_posts/2022-06-07-initial.md
@@ -10,7 +10,7 @@ preview: "This is an example of text that can be included on the main page of th
 ---
 This is some example of the content of a post, which we should be able to show as a snippet on the main page. Otherwise we're left to writing the rest of this post in the main body of the markdown file. Final test.
 
-For example, this is the second paragraph, which shouldn't appear in the preview snippet. We can also try to introduce a sidenote Here we place the sidenote in the syntaxt that markdown expects to use for strikethroughs. We can continue on as if nothing happened. We seem to have some spacing issues though.
+For example, this is the second paragraph, which shouldn't appear in the preview snippet. ~~Here is a separate sidenote with formatting and all sorts of fun effects.~~ We can also try to introduce a sidenote Here we place the sidenote in the syntaxt that markdown expects to use for strikethroughs. We can continue on as if nothing happened. We seem to have some spacing issues though.
 
 -fig This is some figure text. fig-![image-title](/assets/img/grief_10.jpg)
 {: .right-para }
