--- a/_posts/2022-08-21-quiet.md
+++ b/_posts/2022-08-21-quiet.md
@@ -10,7 +10,7 @@ preview: "There is a small bookstore in 下北沢 on the second floor of a trian
 ---
 The small flat paper package, about the size of my palm, contains a mesh packet of ground coffee that unfolds to sit on top of the small porcelain cup I bought at Aeon. The instructions say that for the best flavor I should use water that has been made as hot as possible, and while I don't know if this is correct, the added danger makes the experience more memorable. Hot water splashes onto my hand when I pour. The wet grounds puff up, darken, and sink back into the mesh packet. There is a strong and pleasant odor.
 
-I bought the packet yesterday at a small and very hip coffee stand on a street parallel to the main road between 渋谷 and 代々木. This side road was itself parallel to the major train route between where I live and the center of 東京. Beside the rails was another narrower footpath that had views of all the gated ground-level crossings whose lever arms rose and fell every ten minutes or so. The neighborhood is known for its small hills and lush trees. The overhanging clouds and humidity made everything low-contrast and flat and beautiful. To the north-east the tops of the trees of 明治神宮 were visible also. Along the road I stopped at a small publishing house that I had visited five years before~Shibuya Publishing and Booksellers (SPBS本店).~ which had a translated copy of the graphic novel "Sabrina" by Drnaso as well as some photobooks by young 在日 authors printed on muted textured paper. They sold small bags with their logo that had a fun cartoon face in one of two possible expressions. I may come back. I think they do events. They sold translations of the book Momo by Michael Ende. They sold bottles of hot sauce whose bottles had labels decorated by some local artist.
+I bought the packet yesterday at a small and very hip coffee stand on a street parallel to the main road between 渋谷 and 代々木. This side road was itself parallel to the major train route between where I live and the center of 東京. Beside the rails was another narrower footpath that had views of all the gated ground-level crossings whose lever arms rose and fell every ten minutes or so. The neighborhood is known for its small hills and lush trees. The overhanging clouds and humidity made everything low-contrast and flat and beautiful. To the north-east the tops of the trees of 明治神宮 were visible also. Along the road I stopped at a small publishing house that I had visited five years before ~~Shibuya Publishing and Booksellers (SPBS本店).~~ which had a translated copy of the graphic novel "Sabrina" by Drnaso as well as some photobooks by young 在日 authors printed on muted textured paper. They sold small bags with their logo that had a fun cartoon face in one of two possible expressions. I may come back. I think they do events. They sold translations of the book Momo by Michael Ende. They sold bottles of hot sauce whose bottles had labels decorated by some local artist.
 
 I had an iced coffee with ほうじ茶 milk at a cafe called Faro in 代々木 before all of this, after arriving on the rapid express train. I sat in the cafe for a while and took some notes in an A6 Midori notebook I bought in Cambridge, MA. I had been using an identical notebook to keep grammar and kanji notes; they come in packs of threes and I differentiate them with colored tape along their spine. I started to feel bad when the cafe began to fill up, closer to noon. Most of the customers were pairs of young women, and were there for the 'unique sandwiches' that the cafe offered, which appeared to be its major selling point and specialty, and were indeed very neat and gourmet in appearance, though I didn't order one. My iced coffee was served in a copper mug, and the water served along with it, in a low featureless round glass, was florally essenced. The balance of flavors was nice; bitter enough to suffice as a morning drink. Its bobbing ice cubes were large, transparent, and dolorous.
 
