--- a/_posts/2022-08-21-quiet.md
+++ b/_posts/2022-08-21-quiet.md
@@ -3,7 +3,7 @@ layout: post
 title: "Your face looks like a perfect glyph"
 sub-title: "Coffee until everything hurts"
 date: 2022-08-20 20:00:00 -04
-permalink: "/paleness/"
+permalink: "/quiet/"
 location: "神奈川県厚木市"
 ordinal: 1
 preview: "There is a small bookstore in 下北沢 on the second floor of a triangular building with a cellophane packaged double-volume translation of Gravity's Rainbow (重力の虹). If I begin to feel awful I'll purchase it."
