--- a/_posts/2022-08-23-humid.md
+++ b/_posts/2022-08-23-humid.md
@@ -6,7 +6,7 @@ date: 2022-08-23 14:00:00 +09
 permalink: "/humid/"
 location: "神奈川県厚木市"
 ordinal: 2
-preview: "Walking in the morning I watched a woman report flowers in a windowbox and a man pick up what few cigarette butts and scraps of paper there were on the sidestreets."
+preview: "Walking in the morning I watched a woman repot flowers in a windowbox and a man pick up what few cigarette butts and scraps of paper there were on the sidestreets."
 ---
 The auxiliary rack for drying my laundry has something like forty small pincers for suspending various small items. It's not raining, nor is it forecasted to until tomorrow, but I worry a little if my clothes will dry in this air. I read somewhere that warm air holds more water, which makes sense, I guess.
 
