--- a/_posts/2022-08-24-limn.md
+++ b/_posts/2022-08-24-limn.md
@@ -24,4 +24,4 @@ People who know the names of things appear powerful to me. We are good at referr
 
 Low howling storms in the late afternoon were presaged by green darkness. Heavy rivulets from the windows' tops to bottoms. The shhh of guttered water and the reverberation of tempered glass slapped by sound. Clouds so low the topography looked smoked or glazed. While walking in the early afternoon, before the weather hit, there was the smell of earth and vaporized water. I've been told that the cicadas ~~蝉. When they make sound the verb is 鳴く (to whine, chirp), which is homophonous to 泣く (to cry, as a child does). The corresponding onomotepia is usually ミンミン (min, min).~~ will stop making noise soon; I am not sure if this means they will die, or hibernate, or simply move south. I am waiting for the trees to change, or for there to be a chill when I open my window. I am not sure what I am waiting for. I am waiting to know.
 
-Before taking the bus to the research center, up in the mountains, I spent five minutes in the convenience store next to the bus depot; it was a Daily Yamazaki, which are relatively rare, and perhaps rivaled only by MiniStop in their novelty, barring a few local offshoots in the far peninsulas down south. I bought a small packet of candy because I wanted something small and bolus-like to consume between sips of coffee later in the day. Once I am in a place for two weeks I start to build causal chains of petite actions for comfort. Before leaving the house I placed two small coins in an accessible pocket from which I could pay for the candy easily. I have begun to organize things in grids on my desk for the morning. I have begun to take long looping walks around my apartment when I cannot be inside any longer, and seen things like women riding bikes with empty children's seats strapped to the back, old men collecting trash, a teenager trip and nearly fall on an errant curb, and a large stone cemetery surrounded by unoccupied lots filled with tall green grass.
+Before taking the bus to the research center, up in the mountains, I spent five minutes in the convenience store next to the bus depot; it was a Daily Yamazaki, which are relatively rare, and perhaps rivaled only by MiniStop in their novelty, barring a few local offshoots in the far peninsulas down south. I bought a small packet of candy because I wanted something small and bolus-like to consume between sips of coffee later in the day. Once I am in a place for two weeks I start to build causal chains of petite actions for comfort. Before leaving the house I placed two small coins in an accessible pocket from which I could pay for the candy easily. I have begun to organize things in grids on my desk for the morning. I have begun to take long looping walks around my apartment when I cannot be inside any longer, and have seen things like women riding bikes with empty children's seats strapped to the back, old men collecting trash, a teenager trip and nearly fall on an errant curb, and a large stone cemetery surrounded by unoccupied lots filled with tall green grass.
