--- a/_posts/2022-08-25-samizdat.md
+++ b/_posts/2022-08-25-samizdat.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "There's something in your voice's declension"
+title: "There's something in your mood's declension"
 sub-title: "The translated title of Camera Lucida is 明るい部屋."
 date: 2022-08-25 23:00:00 +09
 permalink: "/samizdat/"
