--- a/_posts/2022-08-25-samizdat.md
+++ b/_posts/2022-08-25-samizdat.md
@@ -8,7 +8,7 @@ location: "東京都新宿区"
 ordinal: 4
 preview: "The other patrons of the camera store also, as seemed appropriate, only leaned in and inspected the terrifying precision of the arrayed optical elements, buying nothing."
 ---
-In the early afternoon I took a train into the city under the pretense of visiting a used camera store. The store was pleasant, compact, covered in mirror-backed shelves displaying cameras organized by manufacturer. Canon, Nikon, Pentax, Mamiya. Due to their trendiness the film point-and-shoots, the Contaxs and Yashicas, were displayed in their own, centrally located shelf with a placard above; some of the more famous models were priced beyond ¥150000. I didn't buy anything but I think I will return and pick up a Pentax MX; I brought my two K-mount lenses with me in the hope that I could replace the body of my old camera (an ailing Ricoh SR-2), which had been having mechanical issues that seemed too complex and too expensive to fix. Around the used camera store ~~新宿中古カメラ.~~ were other camera stores, most much fancier and specializing in new gear. This included the blaringly lit ヨドバシカメラ, which I did not enter, but which while walking past gave me the feeling that I had entered.
+In the early afternoon I took a train into the city under the pretense of visiting a used camera store. The store was pleasant, compact, covered in mirror-backed shelves displaying cameras organized by manufacturer. Canon, Nikon, Pentax, Mamiya. Due to their trendiness the film point-and-shoots, the Contaxs and Yashicas, were displayed in their own, centrally located shelf with a placard above; some of the more famous models were priced beyond ¥150000. I didn't buy anything but I think I will return and pick up a Pentax MX; I brought my two K-mount lenses with me in the hope that I could replace the body of my old camera (an ailing Ricoh SR-2), which had been having mechanical issues that seemed too complex and too expensive to fix. Around the used camera store ~~新宿中古カメラ市場.~~ were other camera stores, most much fancier and specializing in new gear. This included the blaringly lit ヨドバシカメラ, which I did not enter, but which while walking past gave me the feeling that I had entered.
 
 Afterwards I walked around the top of 明治神宮 again, though this time looped up and around (after working in a Starbucks for about an hour) toward 原宿, which by that time of evening, and during a weekday night, was pleasant and quiet enough to walk though. I sort of dispassionately looked through some thrift stores, but mostly people-watched and sipped from my water bottle at intervals. The nights have been flirting with the idea of being cool; the humidity has lowered a little. When I look at the average monthly temperatures here they are: September 75F, October 65F, November 55F. Soon this will kick in. Steps down toward winter.
 
