--- a/_posts/2022-10-05-mojibake.md
+++ b/_posts/2022-10-05-mojibake.md
@@ -8,12 +8,12 @@ location: "神奈川県厚木市"
 ordinal: 13
 preview: "Thinking again about the movie Dark Water (2002) 「仄暗い水の底から」, which I have seen, but not Dark Water (2005) or Dark Waters (2019)."
 ---
-Many people I've talked to describe a fear of calcification. I am less interested in this fear, which is quite natural and well-worn, than I am in their use of the word calcification, which describes a process that I know for a fact most of these people have never seen or known in any real sense. I have some vague hunch that the pipes of one's house can often fill with scale or lime, which I assume must have some calcareous aspect. I also know of the existence (but not the name) of various horribly ossifying diseases, where one's soft tissues are turned to bone through some autoimmune catastrophe. I know bones contain calcium, though not how much, or how, or why. But these people don't say ossify, they say calcification. Ossify is scarier, but they don't say it when they describe their fear. Maybe this is all because I have used the word first and they have repeated it because it is natural to begin to use the specific words that have begin to anchor a conversation, within that conversation, over and over again as a sort of implicit way of expressing devotion or love.
+Many people I've talked to describe a fear of calcification. I am less interested in this fear, which is quite natural and well-worn, than I am in their use of the word calcification, which describes a process that I know for a fact most of these people have never seen or known in any real sense. I have some vague hunch that the pipes of one's house can often fill with scale or lime, which I assume must have some calcareous aspect. I also know of the existence (but not the name) of various horribly ossifying diseases, where one's soft tissues are turned to bone through some autoimmune catastrophe. I know bones contain calcium, though not how much, or how, or why. But these people don't say ossify, they say calcification. Ossify is scarier, but they don't say it when they describe their fear. Maybe this is all because I have used the word first and they have just repeated it, because it is natural to use the specific words that have begun to anchor a conversation, within that conversation, over and over again as a sort of implicit way of expressing devotion or love.
 
 When I picture calcification, I think of organs heavy with calcareous inclusions and boluses. I think of the word chalcogen, because it reminds me of chalk, which apparently descends from calx, which itself refers to calcium through its oxide, rather than calcium itself. This oxide is in turn lime, or quicklime, not chalk, which is the carbonate, not the oxide, though both have been used in art. I don't know what scale is. I know that mild acids can be used to reduce mineral deposits. I know that the stannous flouride used in toothpaste can also paradoxically stain the teeth, but that this staining can be removed by a trained dentist. I know that the greater fear in aging is the loss of calcium in one's bones, not its accretion. I know that there is great risk in early life, before the skull hardens, of injury to the soft fontanelle of the infant.
 
-I think it is easy for people to explain to me the things they fear, though only the list of things they have fully understood that they fear, and are willing to admit to themselves that they fear. This is a very safe conversation to have, especially with a stranger, and it doesn't require a large expenditure or energy, or exposure to great risk, and thus in some sense doesn't matter very much. Am I comfortable in my aridity? Do I look so disconnected as to be effectively socially sterile and emotionally dampening? Am I like a fissure in the earth into which the curious throw small trinkets and bits of garbage? I am tired of people explaining to me that they are worried about calcification. I read articles about monks who consume resinous sap and less and less water until death by perfect self mummification, and how their bodies remain upright, lotused, and faintly sweet in aroma when found. I do not know if these stories are real. I don't know what kind of tree has the right kind of sap, and if it is painful to go that way. It must, I imagine, accrete in the liver, the pancreas, the sea-grape sacs of the lungs. I do not know what the spleen does, though I know they are frequently removed in part, can be twisted, and swell with certain sicknesses.
+I think it is easy for people to explain to me the things they fear, though only the list of things they have fully understood that they fear, and are willing to admit to themselves that they fear. This is a very safe conversation to have, especially with a stranger. It doesn't require a large expenditure or energy, or exposure to great risk, and thus in some sense doesn't matter very much. Am I comfortable in my aridity? Do I look so disconnected as to be effectively socially sterile and emotionally dampening? Am I like a fissure in the earth into which the curious throw small trinkets and bits of garbage? I am tired of people explaining to me that they are worried about calcification. I read articles about monks who consume resinous sap and less and less water until death by perfect self mummification, and how their bodies remain upright, lotused, and faintly sweet in aroma when found. I do not know if these stories are real. I don't know what kind of tree has the right kind of sap, and if it is painful to go that way. It must, I imagine, accrete in the liver, the pancreas, the sea-grape sacs of the lungs. I do not know what the spleen does, though I know they are frequently removed in part, can be twisted, can swell with certain sicknesses.
 
-If someone wanted to here, they could live a glyphless life. The train lines are marked in colors. The menus are covered in pictures. The beautiful things can be pointed at, bought, eaten, or thought about endlessly and in silence.
+If someone wanted to here, they could live a glyphless life. The train lines are marked in colors. The menus are covered in pictures. The beautiful things can be pointed at, bought, eaten, or thought about endlessly and without sign.
 
-I leave this short because otherwise they contain nothing at all.
+I leave this short because otherwise they will contain nothing at all.
