--- a/_posts/2022-11-25-muntin.md
+++ b/_posts/2022-11-25-muntin.md
@@ -14,8 +14,8 @@ I feel bad about being mute and so I start to think about even worse things, lik
 
 Now there is almost no time left to be mute. Last weekend I spent three days in 山梨県, window out toward the comically conical 富士山. Wake up, see the mountain, say nothing, stare at the mountain for one hour before slinking out from under the duvet into the room's high chill. Eat a granola bar and look at the mountain. Sip hot water from a Hydroflask and repeat the words a'ā and pāhoehoe in one's mind. The town was called 鳴沢, seemingly known for cabbage, which still squatly manned the fields. There was also the occasional patch of what I assumed were radishes. All of this against a clutter of shuttered motels, almost all uniformly rotting. Exposed wall timbers and chewed steel. The city had shrunk to its most vital parts, its appendages starved of blood. A clean though humble elementary school curled around a broad gravel field. A walking bridge up and over the main road. A park with a glossy red swingset. A small (mobile) coffee stand run by two young adults from the neighboring capital city. A roadside stand selling birch mold pellets, used for tea and incredibly high in oxalates.
 
-I hike up a ridge of mountains from which to better see the one big mountain, which rises frighteningly from a sea of trees a few kilometers away. The ridge is dotted with three major viewing platforms, and the trail along the ridge is rotted in some places, covered in leaves, and has reached its last passable state before the early winter snows, which my phone says are due the day after I leave. I pass at least five shuttered fruit stands for grape on the walk back. I stop briefly at the 道の駅, which hums lowly with Vietnamese and Chinese voices. The main museum attached there has, at its entrance, a model of a Tyrannosaurus Rex, which from my memory are North American. I buy nothing at the 道の駅, though I eat a donut I bought before my hike, and sip hot water from the Hydroflask. The mountain's top is just covered by then. The old man at the top of the highest viewing platform says that it is a mountain that makes its own clouds.
+I hike up a ridge of mountains from which to better see the one big mountain, which rises frighteningly from a sea of trees a few kilometers away. The ridge is dotted with three major viewing platforms, and the trail along the ridge is rotted in some places, covered in leaves, and has reached its last passable state before the early winter snows, which my phone says are due the day after I leave. I pass at least five shuttered fruit stands for grapes on the walk back. I stop briefly at the 道の駅, which hums lowly with Vietnamese and Chinese voices. The main museum attached there has, at its entrance, a model of a Tyrannosaurus Rex, which from my memory are North American. I buy nothing at the 道の駅, though I eat a donut I bought before my hike, and sip hot water from the Hydroflask. The mountain's top is just covered by then. The old man at the top of the highest viewing platform says that it is a mountain that makes its own clouds.
 
-The other thing is that watching other people is supremely comforting and full of the illusion of living a fulfilling life: the sort of one that people sleep really well upon realizing that they are inside of. The way the cashier hands me two international stamps for use in postcards. The two high-schoolers having a spat on the riverbank as I walk by. The farmer tending his triangle of cabbage nested beneath a lofted highway interchange. The bus passenger falling asleep just as the rain starts to get big and sloppy on the windows. I eat ginger chicken meatball soup from a convenience store on a wide series of steps next to the main elementary school of 河口湖 in the cold and realize that its been entirely remodeled since I was here last five years ago. I see a garage from whose rafters hang at least fifty 干し柿 and wonder if were I to walk up to them they would permit me to buy some. But I don't know if they are ready, and I don't walk up to them, and I do not ask.
+The other thing is that watching other people is supremely comforting and full of the illusion of living a fulfilling life: the sort of one that people sleep really well upon realizing that they are inside of. The way the cashier hands me two international stamps for use in postcards. The two high-schoolers having a spat on the riverbank as I walk by. The farmer tending his triangle of cabbage nestled beneath a lofted highway interchange. The bus passenger falling asleep just as the rain starts to get big and sloppy on the windows. I eat ginger chicken meatball soup from a convenience store on a wide series of steps next to the main elementary school of 河口湖 in the cold and realize it's been entirely remodeled since I was here last, five years ago. I feel sad about this. I see a garage from whose rafters hang at least fifty 干し柿 and wonder if were I to walk up to them if they would permit me to buy some. But I don't know if they are ready, and I don't walk up to them, and I do not ask.
 
 Two swan boats putter furiously far out, upsetting the morning.
