--- a/_posts/2024-06-28-crenel.md
+++ b/_posts/2024-06-28-crenel.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "change the main date"
+title: "カフェ巡り"
 sub-title: ""
 date: 2024-06-28 01:00:00 +09
 permalink: "/crenel/"
 location: "Cambridge, MA"
 ordinal: 21
-preview: ""
+preview: "Heat has been bleeding out of the days, into my head."
 ---
 
 Last Friday morning a physics graduate student at MIT was killed on a bicycle at the intersection of Hampshire and Portland. I bike through this intersection whenever I go to campus. I live on Prospect, take a left onto Hampshire, and take its protected bike lane nearly all the way down until it merges with Broadway, turning right onto Galileo, and then Vassar, which intersects with a corner of campus. Portland is the last cross street before the Broadway merge. I biked that morning also, although closer to 10am, while the accident had been around 8:30, and hadn't seen what must have been only recently vacated. A truck had taken a right without slowing. It's the corner that they had been building a new biological institute, clad in white marble, for the last year or so. I watched it go from a bare lot to an I-beam skeleton to an austere little 'center for life sciences,' across from the Dante center for Italian studies. Because of this the bike lane had only recently been freed, painted in green. Cars block it constantly, or park at infringing angles.
