--- a/_posts/2024-06-28-crenel.md
+++ b/_posts/2024-06-28-crenel.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "カフェ巡り"
-sub-title: ""
+sub-title: "Basic patterns"
 date: 2024-06-28 16:00:00 +09
 permalink: "/crenel/"
 location: "Cambridge, MA"
