--- a/_posts/2024-08-17-vitrine.md
+++ b/_posts/2024-08-17-vitrine.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Regular expressions and context-free grammars."
-sub-title: "Unreasonably, I continue to think about how it would look to watch my own life, and this is only half-slackened by imagining you watching instead."
+title: "Regular expressions and context-free grammars"
+sub-title: "Unreasonably, I continue to think about how it would look to watch my own life, and this is only half-slackened by imagining you watching instead"
 date: 2024-08-17 09:00:00 +09
 permalink: "/vitrine/"
 location: "東京都世田谷区下北沢"
