--- a/_posts/2024-08-24-ague.md
+++ b/_posts/2024-08-24-ague.md
@@ -28,4 +28,4 @@ A small sign is affixed next to my apartment door, reproduced in scalable format
 
 The text is common: *セールズ、勧誘お断りします*, basically 'no solicitors,' as posted near doors in the United States also. I see such signs less and less; maybe because I have lived in student-heavy neighborhoods less prone to opening doors or spending money, or else because the great American campaign to eliminate door-to-door salespeople has largely succeeded ~~My honest guess is that door-to-door has survived, just that most solicitation concentrated in areas I don't frequent, for a variety of reasons.~~. It amazes me that anyone has ever bought anything from anyone on their stoop---I imagine something like a scourge of such salespeople, in my mind at their zenith from the 1950s to the 1980s, in part supported by people's willingness before that era to trust most anyone wearing clean clothes. How could it have been that encyclopedia salesmen ever existed? And why does the loss of such people, mythical or not, make me a little sad? Wearing out our innate receptiveness, cultured over decades in enclave-adjacent US neighborhoods, is one of the great corollaries of the American project. A slow and voracious hollowing-out of the market, and a resulting residue of leftover signs, warding off no-one, slowly peeling and yellowing in the sun ~~Of course little of this probably applying to Japanese society, which I imagine must be higher-trust in some ways, one corollary being the persistence (and ongoing generation) of successful neo-religions (or quasi cults) in Japan since the 1940s.~~.
 
-More fun anyway is the character below the text---*Felix the Cat*---who here, perhaps more than in his homeland, is plastered over numerous goods. When I look up Felix I find he was created in 1919. I learn that the Felix on the sign by my door is the 'new Felix' with longer legs and a shorter body, redesigned in the 1950s for a new audience.
+More fun anyway is the character below the text---*Felix the Cat*---who here, perhaps more than in his homeland, is plastered on goods. When I look up Felix I find he was created in 1919. I learn that the Felix on the sign by my door is the 'new Felix' with longer legs and a shorter body, redesigned in the 1950s for a new audience.
