--- a/_posts/2024-08-24-ague.md
+++ b/_posts/2024-08-24-ague.md
@@ -21,7 +21,7 @@ Some mornings I have mistimed coffee, or eaten poorly, and pass hours in hurried
 The pour-over today is stronger than yesterday's, and I've set the grinder two clicks coarser (not far enough). The taste is like melon, or apricot. I've left it out and the last sip is room-temperature.
 {: .quote}
 
-A small sign is affixed next to my apartment door, reproduced in scalable format below.
+A small sign is affixed next to my apartment door, reproduced in scalable format:
 
 -fig フィリックス・ザ・キャット。 fig- <img src="/assets/img/felix_true_color.svg" style="width: 100% !important; padding-left: 25%;padding-right: 25%;">
 {: .right-para }
