--- a/_posts/2024-09-25-neoteny.md
+++ b/_posts/2024-09-25-neoteny.md
@@ -19,13 +19,13 @@ I consider saying things like that this is the only movie I've seen that operate
 
 Besides the cleverness though, besides the front-brained activities of characters with two or three names, besides twins and symmetries and the Ouroborosian stuff that remind us that all film is chopped up and shot out of order and recorded onto multiple tracks and spliced and dubbed and copied ~~That I'm saying 'besides' here is a little dismissive, as for people subject to the same fetters as me these sorts of nods and tongues-in-cheeks are sort of necessary throat-clearings to allow us to relax and accept (after only immense cerebellar exhaustion) whatever secret soft, sweet thing has been hidden at the nucleus of the faff.~~ the movie is very moving. I realize I like to write about how people who at one point cared deeply for each-other come to hate or injure each-other; the reasons I care about this so much are here suppressed and hidden from the reader, save that they may know I find myself, on the cycle of years, separating or reconnecting with people with whom my connection couldn't be said to be 'good' or 'bad' but merely 'important', 'essential', or less charitably 'unavoidable.' And at the end of all this, inside the trope of a distressed damsel whose loses her memory, the movie permits the second-time viewer, who knows who knows each-other, and how, and who knows the trope and thus can let it slip effortlessly down into their amygdala, to desperately hope things had been different. This desperate wish is the whole first act of the movie, just after Diane has put the gun in her mouth, and just before her bed goes up in smoke. The second-time viewer allows it to be this simple, ~~The second-time viewer allows *The Cowboy* to exist.~~ and thinks things like that I wish we could have been better to each-other, or that this morning is really more beautiful than any morning I have ever seen, and so on.
 
-### On fake wooden beams in *Brooklyn Coffee*
+### On fake wooden beams in *Brooklyn Roasting Co*
 
-In the morning, during my first cup of coffee, I look up to the high-ceilings of *Booklyn Coffee*, a small local chain obviously inspired by the average NYC converted-warehouse coffee shop, and see that for about half the roof, slightly away from the edges and restricted from unnecessary alcoves, that parallel wooden boards are suspended from large steel frames to give the illusion that the building's timber joists are exposed. The building is steel-skeletoned. I look to the ceilings corners and see large I-beams coated in a mottled spray-cement of some sort. I marvel at how good the fake beams are, really, at giving the feeling of a brick-built warehouse with solid wooden joists, which of course have basically never been constructed en-masse in Japan given its seismic activity. The coffee is a medium dark roast and clean. The night before I ordered their decaf, which must be made to order, and the bottom had silt, which may mean they grind too finely, or use some other type of filter for their pour-overs. This café has the highest concentration of white people in almost any area of 下北沢, though I am not sure if this is because of its name, its relatively obvious location near to the station and on the first floor, its free and un-managed wi-fi, its reasonably 3rd/4th wave coffee, or something else. The men I see often look like they could be in tech, or creatives. Some of them take Zoom calls in the café, which is almost unimaginable to me. I imagine they look at me and think similar things. Occasionally I see couples, or larger groups with children and more obviously touristic accoutrements. On evening a middle-aged woman sitting at the table next to me consumed an entire salad laden with various ingredients. Pairs of young women will gossip next to me while I work in the late mornings. I often wear headphones, though keep some awareness up for whether the place has become overcrowded and if I ought to give up my seat. I have a punch-card now, even, and sometimes the baristas appear to recognize me; one of them is spectral and tall, and makes cortados without expression.
+In the morning, during my first cup of coffee, I look up to the high-ceilings of *Brooklyn Roasting Co*, a small local chain obviously inspired by the average NYC converted-warehouse coffee shop, and see that for about half the roof, slightly away from the edges and restricted from unnecessary alcoves, that parallel wooden boards are suspended from large steel frames to give the illusion that the building's timber joists are exposed. The building is steel-skeletoned. I look to the ceilings corners and see large I-beams coated in a mottled spray-cement of some sort. I marvel at how good the fake beams are, really, at giving the feeling of a brick-built warehouse with solid wooden joists, which of course have basically never been constructed en-masse in Japan given its seismic activity. The coffee is a medium dark roast and clean. The night before I ordered their decaf, which must be made to order, and the bottom had silt, which may mean they grind too finely, or use some other type of filter for their pour-overs. This café has the highest concentration of white people in almost any area of 下北沢, though I am not sure if this is because of its name, its relatively obvious location near to the station and on the first floor, its free and un-managed wi-fi, its reasonably 3rd/4th wave coffee, or something else. The men I see often look like they could be in tech, or creatives. Some of them take Zoom calls in the café, which is almost unimaginable to me. I imagine they look at me and think similar things. Occasionally I see couples, or larger groups with children and more obviously touristic accoutrements. On evening a middle-aged woman sitting at the table next to me consumed an entire salad laden with various ingredients. Pairs of young women will gossip next to me while I work in the late mornings. I often wear headphones, though keep some awareness up for whether the place has become overcrowded and if I ought to give up my seat. I have a punch-card now, even, and sometimes the baristas appear to recognize me; one of them is spectral and tall, and makes cortados without expression.
 
 ### On fall and the Scholastic book fair
 
-The first days of fall have, as if it were their right, made the weather suddenly cooler, at least for the past few days. Walking without immediately feeling my forehead go damp is a revelation, and through some misassociation of cause and effect at least temporarily lightens my mood, as if whatever nervousness had been making me clammy before had suddenly gone away. I associate this drop in temperature with the start of the school year proper; for some reason I suddenly feel bookish, but also older than I have ever been (true, of course, but the meaning is clear), and further than ever from the years 2002 to 2007 (also true, and a corollary of the above, but the meaning is clear). 
+The first days of fall have, as if it were their right, made the weather suddenly cooler, at least for the past few days. Walking without immediately feeling my forehead go damp is a revelation, and through some misassociation of cause and effect at least temporarily lightens my mood, as if whatever nervousness had been making me clammy before had suddenly gone away. I associate this drop in temperature with the start of the school year proper; for some reason I suddenly feel bookish, but also older than I have ever been (true, of course, but the meaning is clear), and further than ever from the years 2002 to 2007 (also true, and a corollary of the above, but the meaning is clear).
 
 Online, people who grew up in temperate public school districts in the suburban United States ascribe nostalgia to this time of year and its associated events. In particular some time in the late fall the Scholastic book fair appeared, ~~A better expression would be *came to town* as as a child I had no sense of how or why this event happened, only that, like a traveling circus, it represented some possibility for oddities, for perhaps even news from afar, and above all an excuse to be away from home after hours without my parents, after the sun, even, had gone down.~~ even at that stage dismissed by some parents (and embraced by some students) as an excuse to market wares to children, with the proportion of offered goods which were non-books increasing year over year.
 
@@ -40,4 +40,3 @@ The public library at Indian Valley Elementary School was small even to me then,
 It was this nook that contained the most engrossing displays during the book fairs, which must have been over a week or so, though in memory they were a single night. The benches would be stacked high with new, glossy books, many of them paperback though with embossed or otherwise shiny or holographic covers. The center of the room was also filled, some platform or series of boxes bought in so that the nook became a cavern around which one skirted, careful not to disturb the piles of wares. Usually I would be permitted a book or two, or was given some money to purchase something directly. Sometimes I would buy a decorative eraser, or even a Smencil, though even then I felt that the books were more central to the experience, there because they were new and interesting, and a much more reasonable thing to buy. There would be a horror section, a fantasy section, something devoted to the latest series and fads. Books that came with journals with keys, books that came with action figures or glow-in-the-dark plastic frogs or kits for growing salt crystals. There may have even been special displays to house copies of the latest big-sellers; large cardboard fold-outs that could be seen across the room, even over the beige, hulking Macintosh G3s that the library then still had, though even I could tell they were old, and could not run the best apps like *KidPix*.
 
 All of this is to say that when the wind cools and the days are mostly overcast, even here, I can't say that I'm not in a thin fellowship with the rest of the people my age and who grew up on the coasts of the US, even if it is a little embarrassing that that connection is founded on consumption and mass-market paperbacks. Buying books is one of the only activities I feel very little shame about, and I am sure that my basic comfort in visually busy spaces filled with books has a simple lineage wrapped up in all of this, too. I think some straightforward attempt to recreate these spaces, or to buy books published then, is destined to be a little too thin, despite certain ease, despite a near endless set of things one could acquire, but I feel what it might feel like---the possible mechanism of it---and can see smaller, less immediately failure-bound efforts that are cousin to it in my daily activities.
-
