--- a/_posts/2025-01-10-bract.md
+++ b/_posts/2025-01-10-bract.md
@@ -35,8 +35,8 @@ It's now Wednesday, meaning this post is smeared across nearly a week, but that 
 
 Last night, and the night before, I watched 'Barry Lyndon' (1975), which I picked up a DVD copy for, along with 'The Nightmare before Christmas' (1993) for a total of about $5 again at the local Disc Union. I had been meaning to watch it---Kubrick DVDs show up relatively often, and I had told myself that none of them really appealed to me besides Lyndon, wanting something visually quieter than most of his movies, and besides Criterion is playing 'Eyes Wide Shut' (1999) these days as part of a Kidman series
 
-I split the watching at the intermission, which felt natural and satisfying. The entire thing is about three hours, but the central division is so clear and obvious that it feels like two standard ninety minute films stapled together. I almost never watch historical movies, and found the overlaid narration and towering Freytagian pyramid sort of pleasant and comforting, remembering why they exist. The movie is usually noted for its setting and how it was shot, especially the solely candlelit scenes, which are all uniformly dreamy and soft-focus due to the impossibly wide aperture required to properly expose the film. Discussion of these logistics (and the NASA-affiliated lens required) are effectively cliches in the discussion of the movie. Thinking back, I remember the pleasant classical repetitious soundtrack (in this case mostly Handel, though think of 'Melancholia' and its Wagner, that film having deep debts also to BL's nearly static shots directly based on existing paintings), the fierce expressions of the child actors, the length of the shots, the basically painful pulchritude of Marisa Berenson. The film announces events before they happen, which is a soft litmus test for whether the movie has anything to offer but suspense. I felt comfortable watching it---excited at the right moments, relaxed at others, and basically believing the major motivations of characters, trying to square how I live my life with the truth of the mid-to-late eighteenth century, where news traveled slowly, ones identity was unstable, and to be spared from labor was somehow more absurd than it is today.
+I split the watching at the intermission, which felt natural and satisfying. The entire thing is about three hours, but the central division is so clear and obvious that it feels like two standard ninety minute films stapled together. I almost never watch historical movies, and found the overlaid narration and towering Freytagian pyramid sort of pleasant and comforting, remembering why they exist. The movie is usually noted for its setting and how it was shot, especially the solely candlelit scenes, which are all uniformly dreamy and soft-focus due to the impossibly wide aperture required to properly expose the film. Discussion of these logistics (and the NASA-affiliated lens required) are effectively cliches in the discussion of the movie. Thinking back, I remember the pleasant classical repetitious soundtrack (in this case mostly Handel, though think of 'Melancholia' and its Wagner, that film having deep debts also to BL's nearly static shots directly based on existing paintings), the fierce expressions of the child actors, the length of the shots, the basically painful pulchritude of Marisa Berenson. The film announces events before they happen, which is a soft litmus test for whether the movie has anything to offer but suspense. I felt comfortable watching it---excited at the right moments, relaxed at others, and basically believing the major motivations of characters, trying to square how I live my life with the truth of the mid-to-late eighteenth century, where news traveled slowly, one's identity was unstable, and to be spared from labor was somehow more absurd than it is today.
 
 I don't think I have any statements about 'Barry Lyndon', other than that it felt a better way to spend the night than watching ten short form videos on random topics found on the internet. My days have been split between reading on the train (Franny and Zooey has ten pages remaining) and watching movies at night. The insidious aspect is that there is enough media out there to prevent me from ever having to think again, while the charitable view is that consuming the right kind of media might compel human interaction. I like that these books and movies are untouched by generative technology---that I legitimately feel like I can talk a little with Salinger, who the more I read about and of the more I realize was basically a piece of work. Next will probably be 'Tenth of December' ~~Part of the comfort of him specifically being his stint as a depressed technical writer well into his thirties while scratching away at stories on the side, some of these earlier collections being my favorite of Saunders'; I have little interest in his later novels.~~, and then maybe some novels from the 1920s, or the 1890s. Or Cynthia Ozick, who I was shocked to learn yesterday was still alive.
 
-In shirking some of my work duties I have also been writing, though mainly the same short story I realized yesterday I created the original pages document for in late October. I provisionally felt that it was done last night, if mainly only that to make it better now would require massive additions and/or rearrangements, and besides the subject is a little tired and cliché among my stories in particular, and getting it down has been a sort of detoxification process, or self-soothing, or some roundabout way of thinking about my problems or the problems of people in my previous stories (which are my problems distended and mixed with the imagined problems of others), which are basically unseparate from one-another. Now I guess I intend to let it sit, or circulate it among some meager inner circle, until its embarrassments are brought into focus with distance. Through this I have looked through my various sites, re-reading bits of older things, alternately pleased or disgusted by how they've have held up---taken aback, as usual, by how effectively this re-reading can recall, for me, the circumstances of the stories' writing: the people they are about, the unique species of helplessness I had been feeling then, the oblique and snotty allusions, the poor slights or admissions leveled. This continues to be something I continue to do despite objective defficiencies, a lack of formal training, some sort of massive distance from whatever Northeastern snotty unctious thing the Salingers of the world got to marinate in---that I like it still, despite this, would seem pretty snotty and hubristic anyway, if it weren't for that no-one reads it, that it's entirely unclear if anyone were to like it even if they did (let alone be moved or brought to their knees or similarly compulsed to write something themselves). I'm practicing flexing an increasingly arcane muscle, the appreciation of which requires other people to train their own little wormy obscure muscle---something to do with empathy---the loci of people who can do this being basically in blasted places like Iowa City or Marfa or certain parts of upstate NY, each of which comes along with pretty bad side-effects and secondary syndromes that make the whole thing pretty tough.
+In shirking some of my work duties I have also been writing, though mainly the same short story I realized yesterday I created the original pages document for in late October. I provisionally felt that it was done last night, if mainly only that to make it better now would require massive additions and/or rearrangements, and besides the subject is a little tired and cliché among my stories in particular, and getting it down has been a sort of detoxification process, or self-soothing, or some roundabout way of thinking about my problems or the problems of people in my previous stories (which are my problems distended and mixed with the imagined problems of others), which are basically unseparate from one-another. Now I guess I intend to let it sit, or circulate it among some meager inner circle, until its embarrassments are brought into focus with distance. Through this I have looked through my various sites, re-reading bits of older things, alternately pleased or disgusted by how they've have held up---taken aback, as usual, by how effectively this re-reading can recall, for me, the circumstances of the stories' writing: the people they are about, the unique species of helplessness I had been feeling then, the oblique and snotty allusions, the poor slights or admissions leveled. This continues to be something I continue to do despite objective defficiencies, a lack of formal training, some sort of massive distance from whatever Northeastern snotty unctuous thing the Salingers of the world got to marinate in---that I like it still, despite this, would seem pretty lame and hubristic anyway, if it weren't for that no-one reads it, that it's entirely unclear if anyone were to like it even if they did (let alone be moved or brought to their knees or similarly compulsed to write something themselves). I'm practicing flexing an increasingly arcane muscle, the appreciation of which requires other people to train their own little wormy obscure muscle---something to do with empathy---the loci of people who can do this being basically in blasted places like Iowa City or Marfa or certain parts of upstate NY, each of which comes along with pretty bad side-effects and secondary syndromes that make the whole thing pretty tough.
